--- a/tester/mainwindow.ui
+++ b/tester/mainwindow.ui
@@ -39,7 +39,7 @@
       <string>Configure</string>
      </property>
     </widget>
-    <widget class="QGroupBox" name="groupBox_2">
+    <widget class="QGroupBox" name="gboxProtocol">
      <property name="geometry">
       <rect>
        <x>530</x>
@@ -94,7 +94,7 @@
       </property>
      </widget>
     </widget>
-    <widget class="QGroupBox" name="groupBox_3">
+    <widget class="QGroupBox" name="gboxListen">
      <property name="geometry">
       <rect>
        <x>20</x>
@@ -159,7 +159,7 @@
       </property>
      </widget>
     </widget>
-    <widget class="QGroupBox" name="groupBox_4">
+    <widget class="QGroupBox" name="gboxSendTo">
      <property name="geometry">
       <rect>
        <x>270</x>
@@ -379,7 +379,7 @@
      <x>0</x>
      <y>0</y>
      <width>761</width>
-     <height>17</height>
+     <height>22</height>
     </rect>
    </property>
   </widget>
